feat: add adaptive 576 in page product

--- a/src/partials/productD-31SimilarSections.html
+++ b/src/partials/productD-31SimilarSections.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="similar__wrap">
       <h2 class="similar__wrap-title">Похожие товары</h2>
-      <div class="similar__controls">
+      <div class="similar__controls similar__controls--desktop">
         <button class="btn-reset similar__controls-btn similar__controls--prev">
           <svg class="similar__controls-prev-img similar__controls-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
@@ -170,6 +170,18 @@
           </article>
         </li>
       </ul>
+    </div>
+      <div class="similar__controls similar__controls--desktop similar__controls--mobile">
+        <button class="btn-reset similar__controls-btn similar__controls--prev">
+          <svg class="similar__controls-prev-img similar__controls-img">
+            <use xlink:href="img/sprite.svg#arrowBtn"></use>
+          </svg>
+        </button>
+        <button class="btn-reset similar__controls-btn similar__controls--next">
+          <svg class="similar__controls-next-img similar__controls-img">
+            <use xlink:href="img/sprite.svg#arrowBtn"></use>
+          </svg>
+        </button>
     </div>
   </div>
 </section>
