--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -13,6 +13,12 @@
     flex-direction: column;
     align-items: flex-start;
     height: 100%;
+
+    @include mobile {
+      & {
+        padding: 16px;
+      }
+    }
   }
 
   &__rating {
@@ -23,11 +29,25 @@
     line-height: 130%;
     color: var(--secondary-color);
 
+    @include mobile {
+      & {
+        font-size: 12px;
+      }
+    }
+
     &-img {
       margin-right: 6.76px;
       width: 15.73px;
       height: 15px;
       fill: var(--secondary-color);
+
+      @include mobile {
+        & {
+          margin-right: 6px;
+          width: 13px;
+          height: 12px;
+        }
+      }
     }
   }
 
@@ -42,6 +62,26 @@
     padding-right: 13px;
     padding-left: 13px;
     min-height: 133px;
+
+    @include mobile {
+      & {
+        margin-bottom: 7px;
+        min-height: 60.9px;
+        align-items: center;
+        margin-right: -15px;
+        margin-left: -15px;
+        padding-right: 0;
+        padding-left: 0;
+      }
+    }
+
+    &-image {
+      @include mobile {
+        & {
+          width: 78%;
+        }
+      }
+    }
   }
 
   &__title {
@@ -50,6 +90,14 @@
     font-size: 24px;
     line-height: 130%;
     color: var(--night-rider-color);
+
+    @include mobile {
+      & {
+        margin-bottom: 16px;
+        max-width: 108px;
+        font-size: 16px;
+      }
+    }
 
     &-model {
       display: inline-block;
@@ -62,6 +110,12 @@
     font-size: 16px;
     line-height: 130%;
     color: var(--grey-shade-color);
+
+    @include mobile {
+      & {
+        margin-bottom: 16px;
+      }
+    }
   }
 
   &__link {
@@ -82,6 +136,12 @@
     &:active {
       border-color: var(--primary-shade-color);
       background-color: var(--primary-shade-color);
+    }
+
+    @include mobile {
+      & {
+        padding: 10px 23px;
+      }
     }
   }
 }
