--- a/src/scss/components/_productD-31BuyFirst.scss
+++ b/src/scss/components/_productD-31BuyFirst.scss
@@ -4,10 +4,30 @@
 
       &-rating {
         margin-bottom: 3px;
+
+        @include mobile {
+          & {
+            margin-bottom: 2px;
+            font-size: 16px;
+          }
+
+          &-img {
+            width: 16px;
+            height: 15px;
+          }
+        }
       }
 
       &-title {
         margin-bottom: 4px;
+
+        @include mobile {
+          & {
+            margin-bottom: 8px;
+            max-width: 100%;
+            font-size: 16px;
+          }
+        }
       }
 
       &-text {
@@ -15,6 +35,19 @@
         font-size: 14px;
         line-height: 100%;
         color: var(--grey-color);
+
+        @include high-tablet {
+          & {
+            margin-bottom: 21px;
+          }
+        }
+
+        @include mobile {
+          & {
+            margin-bottom: 17.2px;
+            max-width: 244px;
+          }
+        }
       }
 
       &-price {
@@ -22,6 +55,19 @@
         font-size: 36px;
         line-height: 130%;
         color: var(--night-rider-color);
+
+        @include high-tablet {
+          & {
+            margin-bottom: 21.3px;
+          }
+        }
+
+        @include mobile {
+          & {
+            margin-bottom: 15px;
+            font-size: 24px;
+          }
+        }
       }
 
       &-click-btn {
@@ -29,6 +75,20 @@
         margin-bottom: 12px;
         background-color: var(--primary-color);
         color: var(--white-color);
+
+        @include high-tablet {
+          & {
+            margin-bottom: 12.8px;
+          }
+        }
+
+        @include mobile {
+          & {
+            margin-left: -0.2px;
+            padding: 17px 33px;
+            width: 100%;
+          }
+        }
       }
 
       &-basket-btn {
@@ -36,6 +96,15 @@
         font-size: 16px;
         line-height: 130%;
         color: var(--primary-color);
+
+        @include mobile {
+          & {
+            transform: translateX(0);
+            display: flex;
+            justify-content: center;
+            width: 100%;
+          }
+        }
       }
     }
   }
