--- a/src/scss/components/_productD-31InfoFirst.scss
+++ b/src/scss/components/_productD-31InfoFirst.scss
@@ -4,29 +4,30 @@
       margin-bottom: 32px;
       display: grid;
       grid-template-columns: repeat(12, 1fr);
-      grid-template-rows: minmax(245px, auto) minmax(81px, auto);
+      grid-template-rows: 251px 81px;
       column-gap: 32px;
-      row-gap: 11px;
+      row-gap: 12px;
 
       @include high-desktop {
         & {
           grid-template-columns: repeat(9, 1fr);
-          grid-template-rows: minmax(201px, auto) minmax(81px, auto);
-          row-gap: 13px;
+          grid-template-rows: 202px 81px;
+          row-gap: 15px;
         }
       }
 
       @include high-tablet {
         & {
           grid-template-columns: repeat(6, 1fr);
+          grid-template-rows: 245px 349px;
           row-gap: 30px;
         }
       }
 
       @include mobile {
         & {
-          grid-template-rows: minmax(144px, auto) minmax(81px, auto);
-          row-gap: 0;
+          grid-template-rows: 144px 81px 246px;
+          row-gap: 0
         }
       }
     }
@@ -44,12 +45,6 @@
       @include high-tablet {
         & {
           grid-column: 1/7;
-        }
-      }
-
-      @include mobile {
-        & {
-          height: 143.5px;
         }
       }
     }
@@ -72,7 +67,6 @@
         & {
           grid-column: 1/3;
           padding: 26px 3px 23px 3px;
-          height: 349px;
         }
       }
 
@@ -80,7 +74,6 @@
         & {
           grid-column: 1/7;
           padding: 0px 0px 0px 10px;
-          height: 81px;
         }
       }
     }
@@ -96,7 +89,7 @@
       @include high-desktop {
         & {
           grid-column: 6/10;
-          padding-top: 13.8px;
+          padding-top: 13px;
           padding-left: 0.5px;
         }
       }
@@ -105,7 +98,7 @@
         & {
           grid-column: 3/7;
           grid-row: 2/3;
-          padding-top: 50px;
+          padding-top: 50.3px;
           padding-left: 1.6px;
         }
       }
