feat: add adaptive modal swiper image

--- a/src/partials/productModalSwiper.html
+++ b/src/partials/productModalSwiper.html
@@ -26,7 +26,7 @@
               <picture class="product__modal-large-picture">
                 <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
                 <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__modal-large-image" width="447"  height="418" alt="Первое большое изображение дивана тканевого прямого D-31">
+                <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__modal-large-image product__modal-large-image-mobile3" width="447"  height="418" alt="Первое большое изображение дивана тканевого прямого D-31">
               </picture>
           </li>
           <li class="swiper-slide product__modal-large-slide">
@@ -101,6 +101,16 @@
           </li>
         </ul>
       </div>
+      <button class="btn-reset product__modal-small-btn product__modal-small-btn--prev product__modal-small--prev">
+        <svg class="product__modal-small-btn-img product__modal-small-btn-img--prev product__modal-small-img">
+          <use xlink:href="img/sprite.svg#arrowBtn"></use>
+        </svg>
+      </button>
+      <button class="btn-reset product__modal-small-btn product__modal-small-btn--next product__modal-small--next">
+        <svg class="product__modal-small-btn-img product__modal-small-btn-img--next product__modal-small-img">
+          <use xlink:href="img/sprite.svg#arrowBtn"></use>
+        </svg>
+      </button>
     </div>
   </div>
 </div>
