--- a/src/scss/components/_productModal.scss
+++ b/src/scss/components/_productModal.scss
@@ -5,11 +5,26 @@
     &-btn {
       top: 20px;
       right: 20px;
+      z-index: 2;
+
+      @include mobile {
+        & {
+          width: 12px;
+          height: 12px;
+        }
+      }
 
       &-img {
         width: 20px;
         height: 20px;
         fill: var(--grey-color);
+
+        @include mobile {
+          & {
+            width: 12px;
+            height: 12px;
+          }
+        }
       }
     }
   }
