--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -18,4 +18,7 @@
 
 @import '../../node_modules/nouislider/dist/nouislider.min';
 
+@import '../../node_modules/choices.js/public/assets/styles/choices.min';
+
+
 
