fix: bug index.html W3C

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -3,8 +3,8 @@
     <div class="feedback__wrapper">
       <div class="feedback__wrapper-content">
         <h2 class="section-title feedback__wrapper-title">Мы всегда вам рады!</h2>
-        <p class="feedback__wrapper-text">Безусловно, новая модель организационной деятельности в значительной степени обусловливает важность распределения внутренних резервов и ресурсов.
-          <span class="tooltip">
+        <div class="feedback__wrapper-text">Безусловно, новая модель организационной деятельности в значительной степени обусловливает важность распределения внутренних резервов и ресурсов.
+          <div class="tooltip">
             <button class="btn-reset tooltip__btn tippy-tooltip" data-template="one">
               <svg class="tooltip__btn-image">
                 <use xlink:href="img/sprite.svg#tooltip"></use>
@@ -15,8 +15,8 @@
                 <strong>Реплицированные с зарубежных источников, исследования формируют глобальную сеть.</strong>
               </div>
             </div>
-          </span>
-        </p>
+          </div>
+        </div>
         <form action="#" class="form feedback__form">
           <label class="feedback__form-label">
             <input type="text" name="Имя" class="input-reset feedback__form-input input-name" placeholder="Как вас зовут?">
