--- a/src/partials/catalogCard.html
+++ b/src/partials/catalogCard.html
@@ -13,7 +13,8 @@
         <img loading="lazy" src="img/card/sofa1.png" class="card__picture-image" width="266" height="82" alt="Диван кожаный “R-94”">
       </picture>
       <h3 class="card__title">Диван кожаный
-        <span class="card__title-model"><no-typography>“R-94”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“R-94”</no-typography></span>
+      </h3>
       <span class="card__price">94 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -32,7 +33,8 @@
         <img loading="lazy" src="img/card/sofa2.png" class="card__picture-image" width="261" height="101" alt="Диван апартековый “T-75”">
       </picture>
       <h3 class="card__title">Диван апартековый
-        <span class="card__title-model"><no-typography>“T-75”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“T-75”</no-typography></span>
+      </h3>
       <span class="card__price">69 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -51,7 +53,8 @@
         <img loading="lazy" src="img/card/sofa3.png" class="card__picture-image" width="262" height="103" alt="Диван тканевый “D-31”">
       </picture>
       <h3 class="card__title">Диван тканевый
-        <span class="card__title-model"><no-typography>“D-31”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“D-31”</no-typography></span>
+      </h3>
       <span class="card__price">28 490 руб</span>
       <a href="productD-31.html" class="card__link btn-all">Купить</a>
     </article>
@@ -70,7 +73,8 @@
         <img loading="lazy" src="img/card/sofa4.png" class="card__picture-image" width="257" height="125" alt="Диван велюровый “Y-68”">
       </picture>
       <h3 class="card__title">Диван велюровый
-        <span class="card__title-model"><no-typography>“Y-68”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“Y-68”</no-typography></span>
+      </h3>
       <span class="card__price">22 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -89,7 +93,8 @@
         <img loading="lazy" src="img/card/sofa5.png" class="card__picture-image" width="265" height="117" alt="Диван из шинила “W-95”">
       </picture>
       <h3 class="card__title">Диван из шинила
-        <span class="card__title-model"><no-typography>“W-95”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“W-95”</no-typography></span>
+      </h3>
       <span class="card__price">22 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -108,7 +113,8 @@
         <img loading="lazy" src="img/card/sofa6.png" class="card__picture-image" width="271" height="117" alt="Диван флоковый “G-41”">
       </picture>
       <h3 class="card__title">Диван флоковый
-        <span class="card__title-model"><no-typography>“G-41”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“G-41”</no-typography></span>
+      </h3>
       <span class="card__price">17 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -127,7 +133,8 @@
         <img loading="lazy" src="img/card/sofa7.png" class="card__picture-image" width="266" height="130" alt="Диван шиниловый “V-43”">
       </picture>
       <h3 class="card__title">Диван шиниловый
-        <span class="card__title-model"><no-typography>“V-43”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“V-43”</no-typography></span>
+      </h3>
       <span class="card__price">19 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -146,7 +153,8 @@
         <img loading="lazy" src="img/card/sofa8.png" class="card__picture-image" width="212" height="124" alt="Диван велюровый “S-99”">
       </picture>
       <h3 class="card__title">Диван велюровый
-        <span class="card__title-model"><no-typography>“S-99”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“S-99”</no-typography></span>
+      </h3>
       <span class="card__price">19 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -165,7 +173,8 @@
         <img loading="lazy" src="img/card/sofa9.png" class="card__picture-image" width="262" height="125" alt="Диван из кожзама “F-85”">
       </picture>
       <h3 class="card__title"><no-typography>Диван из кожзама</no-typography>
-        <span class="card__title-model"><no-typography>“F-85”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“F-85”</no-typography></span>
+      </h3>
       <span class="card__price">26 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -184,7 +193,8 @@
         <img loading="lazy" src="img/card/sofa10.png" class="card__picture-image" width="251" height="130" alt="Диван флоковый “H-64”">
       </picture>
       <h3 class="card__title">Диван флоковый
-        <span class="card__title-model"><no-typography>“H-64”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“H-64”</no-typography></span>
+      </h3>
       <span class="card__price">25 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -203,7 +213,8 @@
         <img loading="lazy" src="img/card/sofa11.png" class="card__picture-image" width="233" height="133" alt="Диван флоковый “H-58”">
       </picture>
       <h3 class="card__title">Диван флоковый
-        <span class="card__title-model"><no-typography>“H-58”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“H-58”</no-typography></span>
+      </h3>
       <span class="card__price">23 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -222,7 +233,8 @@
         <img loading="lazy" src="img/card/sofa12.png" class="card__picture-image" width="271" height="105" alt="Диван из кожзама “R-43”">
       </picture>
       <h3 class="card__title">Диван из кожзама
-        <span class="card__title-model"><no-typography>“R-43”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“R-43”</no-typography></span>
+      </h3>
       <span class="card__price">33 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -241,7 +253,8 @@
         <img loading="lazy" src="img/card/sofa13.png" class="card__picture-image" width="229" height="127" alt="Диван из шинила “С-42”">
       </picture>
       <h3 class="card__title">Диван из шинила
-        <span class="card__title-model"><no-typography>“С-42”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“С-42”</no-typography></span>
+      </h3>
       <span class="card__price">18 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -260,7 +273,8 @@
         <img loading="lazy" src="img/card/sofa14.png" class="card__picture-image" width="269" height="92" alt="Диван велюровый “U-58”">
       </picture>
       <h3 class="card__title">Диван велюровый
-        <span class="card__title-model"><no-typography>“U-58”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“U-58”</no-typography></span>
+      </h3>
       <span class="card__price">21 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -279,7 +293,8 @@
         <img loading="lazy" src="img/card/sofa15.png" class="card__picture-image" width="269" height="92" alt="Диван флоковый “F-41”">
       </picture>
       <h3 class="card__title">Диван флоковый
-        <span class="card__title-model"><no-typography>“F-41”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“F-41”</no-typography></span>
+      </h3>
       <span class="card__price">17 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -298,7 +313,8 @@
         <img loading="lazy" src="img/card/sofa16.png" class="card__picture-image" width="251" height="105" alt="Диван велюровый “R-85”">
       </picture>
       <h3 class="card__title">Диван велюровый
-        <span class="card__title-model"><no-typography>“R-85”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“R-85”</no-typography></span>
+      </h3>
       <span class="card__price">34 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -317,7 +333,8 @@
         <img loading="lazy" src="img/card/sofa17.png" class="card__picture-image" width="272" height="105" alt="Диван велюровый “S-44”">
       </picture>
       <h3 class="card__title">Диван велюровый
-        <span class="card__title-model"><no-typography>“S-44”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“S-44”</no-typography></span>
+      </h3>
       <span class="card__price">19 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
@@ -336,7 +353,8 @@
         <img loading="lazy" src="img/card/sofa18.png" class="card__picture-image" width="227" height="130" alt="Диван из шинила “С-80”">
       </picture>
       <h3 class="card__title">Диван из шинила
-        <span class="card__title-model"><no-typography>“С-80”</no-typography></span></h3>
+        <span class="card__title-model"><no-typography>“С-80”</no-typography></span>
+      </h3>
       <span class="card__price">20 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
