--- a/src/partials/selectRegion.html
+++ b/src/partials/selectRegion.html
@@ -1,8 +1,8 @@
 <div class="choosing-region choosing__region-wrap choosing__region-wrap-first ">
-  <label class="choosing__region-text" for="select-region">
+  <label class="choosing__region-text" for="selectRegion">
     Ваш регион:
   </label>
-  <select class="choosing__region-select" name="selectRegion" id="select-region">
+  <select class="choosing__region-select" name="selectRegion" id="selectRegion">
     <option value="Москва">Москва</option>
     <option value="Казань">Казань</option>
     <option value="Уфа">Уфа</option>
