--- a/src/partials/navNavigation.html
+++ b/src/partials/navNavigation.html
@@ -1,18 +1,18 @@
-<nav class="nav__navigation" title="Навигация по сайту" data-menu>
+<nav class="navigation" title="Навигация по сайту" data-menu>
 
-  <button class="btn-reset nav__navigation-close" data-menu-close>
-    <svg class="nav__navigation-close-img">
+  <button class="btn-reset navigation__close" data-menu-close>
+    <svg class="navigation__close-img">
       <use xlink:href="img/sprite.svg#burgerClose"></use>
     </svg>
   </button>
 
-  <ul class="list-reset nav__navigation-list">
-    <li class="nav__navigation-item"><a href="catalog.html" class="nav__navigation-link" data-menu-item data-scroll>Каталог</a></li>
-    <li class="nav__navigation-item"><a href="#" class="nav__navigation-link" data-menu-item data-scroll>Магазины</a></li>
-    <li class="nav__navigation-item"><a href="#" class="nav__navigation-link" data-menu-item data-scroll>Шоу-рум</a></li>
-    <li class="nav__navigation-item"><a href="#" class="nav__navigation-link" data-menu-item data-scroll>Доставка и оплата</a></li>
-    <li class="nav__navigation-item"><a href="#" class="nav__navigation-link" data-menu-item data-scroll>Дисконт</a></li>
-    <li class="nav__navigation-item"><a href="contacts.html" class="nav__navigation-link" data-menu-item data-scroll>Контакты</a></li>
+  <ul class="list-reset navigation__list">
+    <li class="navigation__item"><a href="catalog.html" class="navigation__link" data-menu-item data-scroll>Каталог</a></li>
+    <li class="navigation__item"><a href="#" class="navigation__link" data-menu-item data-scroll>Магазины</a></li>
+    <li class="navigation__item"><a href="#" class="navigation__link" data-menu-item data-scroll>Шоу-рум</a></li>
+    <li class="navigation__item"><a href="#" class="navigation__link" data-menu-item data-scroll>Доставка и оплата</a></li>
+    <li class="navigation__item"><a href="#" class="navigation__link" data-menu-item data-scroll>Дисконт</a></li>
+    <li class="navigation__item"><a href="contacts.html" class="navigation__link" data-menu-item data-scroll>Контакты</a></li>
   </ul>
 
   @include('navInfo.html')
