--- a/src/partials/phoneLink.html
+++ b/src/partials/phoneLink.html
@@ -1,6 +1,10 @@
-<a href="tel:+74958854547" class="phone__link">
-  <svg class="phone__link-img">
-    <use xlink:href="img/sprite.svg#phone"></use>
-  </svg>
-  <span><no-typography>+7 (495) 885-45-47</no-typography></span>
-</a>
+<div class="phone">
+  <a href="tel:+74958854547" class="phone__link">
+    <svg class="phone__link-img">
+      <use xlink:href="img/sprite.svg#phone"></use>
+    </svg>
+    <span>
+      <no-typography>+7 (495) 885-45-47</no-typography>
+    </span>
+  </a>
+</div>
