--- a/src/partials/userShopBtn.html
+++ b/src/partials/userShopBtn.html
@@ -1,4 +1,4 @@
-<div class="usershop__wrapper">
+<div class="usershop">
   <button class="btn-reset usershop__user">
     <svg class="usershop__user-img">
       <use xlink:href="img/sprite.svg#user"></use>
