--- a/src/partials/formSearch.html
+++ b/src/partials/formSearch.html
@@ -1,4 +1,4 @@
-<form action="#" class="form__search">
+<form action="#" class="form">
   @include('searchCatalog.html')
   @include('selectCategory.html')
 </form>
