--- a/src/partials/logoLink.html
+++ b/src/partials/logoLink.html
@@ -1,1 +1,3 @@
-<a href="index.html" class="logo__link"><img loading="lazy" src="img/logo.svg" class="logo__link-img" width="187" height="27" alt="Логотип сети магазинов SitDownPls"></a>
+<div class="logo">
+  <a href="index.html" class="logo__link"><img loading="lazy" src="img/logo.svg" class="logo__link-img" width="187" height="27" alt="Логотип сети магазинов SitDownPls"></a>
+</div>
