--- a/src/partials/special.html
+++ b/src/partials/special.html
@@ -3,12 +3,12 @@
     <div class="special__wrapper">
       <h2 class="special__title section-title">Специальные предложения</h2>
       <div class="special__controls">
-        <button class="btn-reset special__controls-btn special__controls--prev">
+        <button class="btn-reset special__controls-btn special-controls-prev">
           <svg class="special__controls-prev-img special__controls-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
         </button>
-        <button class="btn-reset special__controls-btn special__controls--next">
+        <button class="btn-reset special__controls-btn special-controls-next">
           <svg class="special__controls-next-img special__controls-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
