--- a/src/partials/useful.html
+++ b/src/partials/useful.html
@@ -3,12 +3,12 @@
     <div class="useful__wrapper">
       <h2 class="section-title useful__title">Полезное</h2>
       <div class="useful__controls">
-        <button class="btn-reset useful__controls-btn useful__controls--prev">
+        <button class="btn-reset useful__controls-btn useful-controls-prev">
           <svg class="useful__controls-btn-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
         </button>
-        <button class="btn-reset useful__controls-btn useful__controls--next">
+        <button class="btn-reset useful__controls-btn useful-controls-next">
           <svg class="useful__controls-btn-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
