--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -8,7 +8,7 @@
   }
 
   &__content {
-    padding: 30px;
+    padding: 30px 30px 30.5px 30px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
