fix: BEM in product page

--- a/src/partials/productD-31BuyFirst.html
+++ b/src/partials/productD-31BuyFirst.html
@@ -1,4 +1,4 @@
-<div class="product__info-buy">
+<div class="product__info-buy card">
   <span class="card__rating product__info-buy-rating">
     <svg class="card__rating-img product__info-buy-rating-img">
       <use xlink:href="img/sprite.svg#star"></use>
