--- a/src/partials/productD-31InfoFirst.html
+++ b/src/partials/productD-31InfoFirst.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1 class="visually-hidden">На этой странице можно узнать подробную информацию о товаре, посмотреть изображение товара в увеличеном виде, а также посмотреть похожие товары</h1>
   @include('productModal.html')
   <div class="product__info-first">
     @include('productD-31SwiperImageFirst.html')
