--- a/src/partials/productD-31SimilarSections.html
+++ b/src/partials/productD-31SimilarSections.html
@@ -3,12 +3,12 @@
     <div class="similar__wrap">
       <h2 class="similar__wrap-title">Похожие товары</h2>
       <div class="similar__controls similar__controls--desktop">
-        <button class="btn-reset similar__controls-btn similar__controls--prev">
+        <button class="btn-reset similar__controls-btn similar-controls-prev">
           <svg class="similar__controls-prev-img similar__controls-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
         </button>
-        <button class="btn-reset similar__controls-btn similar__controls--next">
+        <button class="btn-reset similar__controls-btn similar-controls-next">
           <svg class="similar__controls-next-img similar__controls-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="swiper similar-swiper similar__produts">
-      <ul class="swiper-wrapper list-reset">
+      <ul class="swiper-wrapper list-reset card">
         <li class="card__item swiper-slide">
           <article class="card__content">
             <span class="card__rating">
@@ -171,13 +171,13 @@
         </li>
       </ul>
     </div>
-      <div class="similar__controls similar__controls--desktop similar__controls--mobile">
-        <button class="btn-reset similar__controls-btn similar__controls--prev">
+      <div class="similar__controls similar__controls--desktop similar-controls-mobile">
+        <button class="btn-reset similar__controls-btn similar-controls-prev">
           <svg class="similar__controls-prev-img similar__controls-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
         </button>
-        <button class="btn-reset similar__controls-btn similar__controls--next">
+        <button class="btn-reset similar__controls-btn similar-controls-next">
           <svg class="similar__controls-next-img similar__controls-img">
             <use xlink:href="img/sprite.svg#arrowBtn"></use>
           </svg>
