feat: add h1 in index.html

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -30,6 +30,7 @@
             alt="Первый слайд">
         </picture>
         <div class="container hero__container">
+          <h1 class="visually-hidden">Это главная страница интернет-магазина мебели и аксессуаров SitDownPls. На ней вы можете ознакомиться с различными товарами, а также действующими специальными предложениями.</h1>
           <h2 class="hero__title hero__title--slide1">Скидка 15% на первую покупку</h2>
           <button class="btn-reset hero__btn hero__btn-slide">Получить!</button>
         </div>
