--- a/src/partials/catalogPrice.html
+++ b/src/partials/catalogPrice.html
@@ -13,6 +13,6 @@
           placeholder="250000" min="0" max="225000" value="150000" aria-label="укажите цену">
       </label>
     </div>
-    <div class="form-price__slide" id="range-slider"></div>
+    <div id="range-slider"></div>
   </form>
 </div>
