fix: BEM in pge catalog

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,6 +1,6 @@
 <section class="catalog">
   <div class="container catalog__container">
-    <h1 class="visually-hidden">Каталог мебельного интернет-магазина SitDownPls</h1>
+    <h1 class="visually-hidden">Полный каталог мебельного интернет-магазина SitDownPls</h1>
     <div class="catalog__content">
       <div class="catalog__left">
         <h2 class="catalog__left-title">Фильтровать по:</h2>
