fix: BEM in page contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,7 @@
 <section class="contacts">
-  <div class="container contancts__container">
-    <h1 class="section-title contacts__title">Контакты</h1>
+  <div class="container contacts__container">
+    <h1 class="visually-hidden">На этой страницы вы можете узнать адрес, режим работы, телефон и местоположение магазина SitDownPls</h1>
+    <h2 class="section-title contacts__title">Контакты</h2>
     <div class="contacts__wrapper">
       <form action="#" class="contacts__form">
         <input class="contacts__form-input" id="search-input" type="text" placeholder="Поиск магазина">
