--- a/src/partials/contactsBreadcrumbs.html
+++ b/src/partials/contactsBreadcrumbs.html
@@ -1,8 +1,10 @@
-<div class="container breadcrumbs__container">
-  <nav class="breadcrumbs__nav" title="Хлебные крошки">
-    <ul class="breadcrumbs__nav-list list-reset">
-      <li class="breadcrumbs__nav-item"><a href="index.html" class="breadcrumbs__nav-link">Главная</a></li>
-      <li class="breadcrumbs__nav-item"><a href="#" class="breadcrumbs__nav-link" aria-current="location">Контакты</a></li>
-    </ul>
-  </nav>
+<div class="breadcrumbs">
+  <div class="container breadcrumbs__container">
+    <nav class="breadcrumbs__nav" title="Хлебные крошки">
+      <ul class="breadcrumbs__nav-list list-reset">
+        <li class="breadcrumbs__nav-item"><a href="index.html" class="breadcrumbs__nav-link">Главная</a></li>
+        <li class="breadcrumbs__nav-item"><a href="#" class="breadcrumbs__nav-link" aria-current="location">Контакты</a></li>
+      </ul>
+    </nav>
+  </div>
 </div>
