fix: w3c in page catalog

--- a/src/partials/catalogDropfilterPrice.html
+++ b/src/partials/catalogDropfilterPrice.html
@@ -13,7 +13,7 @@
         <label class="catalog__form-label">
           <span class="catalog__form-label-span">до</span>
           <input class="catalog__form-input second-price" type="number" id="second-priceAdaptiv"
-            placeholder="250&nbsp;000" min="0" max="225000" value="150 000" aria-label="введите цену">
+            placeholder="250&nbsp;000" min="0" max="225000" value="150000" aria-label="введите цену">
         </label>
       </div>
     </form>
