--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -6,33 +6,212 @@
   bottom: 0;
   overflow: hidden;
   /* фоновый цвет */
-  background: #e0e0e0;
+  background: var(--white-color);
   z-index: 1001;
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.preloader__image {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -35px;
-  margin-left: -35px;
-  text-align: center;
-  animation: preloader-rotate 2s infinite linear;
-}
-
-@keyframes preloader-rotate {
-  100% {
-    transform: rotate(360deg);
+  & > .preloader-box {
+    perspective: 195px;
+    -o-perspective: 195px;
+    -ms-perspective: 195px;
+    -webkit-perspective: 195px;
+    -moz-perspective: 195px;
   }
-}
 
-.loaded_hiding .preloader {
-  transition: 0.3s opacity;
-  opacity: 0;
-}
+  & .preloader-box > div {
+    position: relative;
+    width: 29px;
+    height: 29px;
+    background: rgb(204, 204, 204);
+    float: left;
+    text-align: center;
+    line-height: 29px;
+    font-family: Verdana;
+    font-size: 19px;
+    color: var(--white-color);
+  }
 
-.loaded .preloader {
-  display: none;
+  & .preloader-box > div:nth-child(1) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 0ms infinite alternate;
+    -o-animation: movement 690ms ease 0ms infinite alternate;
+    -ms-animation: movement 690ms ease 0ms infinite alternate;
+    -webkit-animation: movement 690ms ease 0ms infinite alternate;
+    -moz-animation: movement 690ms ease 0ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(2) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 86.25ms infinite alternate;
+    -o-animation: movement 690ms ease 86.25ms infinite alternate;
+    -ms-animation: movement 690ms ease 86.25ms infinite alternate;
+    -webkit-animation: movement 690ms ease 86.25ms infinite alternate;
+    -moz-animation: movement 690ms ease 86.25ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(3) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 172.5ms infinite alternate;
+    -o-animation: movement 690ms ease 172.5ms infinite alternate;
+    -ms-animation: movement 690ms ease 172.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease 172.5ms infinite alternate;
+    -moz-animation: movement 690ms ease 172.5ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(4) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 258.75ms infinite alternate;
+    -o-animation: movement 690ms ease 258.75ms infinite alternate;
+    -ms-animation: movement 690ms ease 258.75ms infinite alternate;
+    -webkit-animation: movement 690ms ease 258.75ms infinite alternate;
+    -moz-animation: movement 690ms ease 258.75ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(5) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 345ms infinite alternate;
+    -o-animation: movement 690ms ease 345ms infinite alternate;
+    -ms-animation: movement 690ms ease 345ms infinite alternate;
+    -webkit-animation: movement 690ms ease 345ms infinite alternate;
+    -moz-animation: movement 690ms ease 345ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(6) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 431.25ms infinite alternate;
+    -o-animation: movement 690ms ease 431.25ms infinite alternate;
+    -ms-animation: movement 690ms ease 431.25ms infinite alternate;
+    -webkit-animation: movement 690ms ease 431.25ms infinite alternate;
+    -moz-animation: movement 690ms ease 431.25ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(7) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(8) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(9) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+  }
+
+  & .preloader-box > div:nth-child(10) {
+    background: var(--primary-color);
+    border-radius: 3px;
+    margin-right: 15px;
+    animation: movement 690ms ease 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+  }
+
+  @keyframes movement {
+    from {
+      transform: scale(1) translateY(0px) rotateX(0deg);
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    to {
+      transform: scale(1.5) translateY(-24px) rotateX(45deg);
+      box-shadow: 0 24px 39px var(--primary-color);
+      background: var(--primary-color);
+    }
+  }
+
+  @-o-keyframes movement {
+    from {
+      -o-transform: scale(1) translateY(0px) rotateX(0deg);
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    to {
+      -o-transform: scale(1.5) translateY(-24px) rotateX(45deg);
+      box-shadow: 0 24px 39px var(--primary-color);
+      background: var(--primary-color);
+    }
+  }
+
+  @-ms-keyframes movement {
+    from {
+      -ms-transform: scale(1) translateY(0px) rotateX(0deg);
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    to {
+      -ms-transform: scale(1.5) translateY(-24px) rotateX(45deg);
+      box-shadow: 0 24px 39px var(--primary-color);
+      background: var(--primary-color);
+    }
+  }
+
+  @-webkit-keyframes movement {
+    from {
+      -webkit-transform: scale(1) translateY(0px) rotateX(0deg);
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    to {
+      -webkit-transform: scale(1.5) translateY(-24px) rotateX(45deg);
+      box-shadow: 0 24px 39px var(--primary-color);
+      background: var(--primary-color);
+    }
+  }
+
+  @-moz-keyframes movement {
+    from {
+      -moz-transform: scale(1) translateY(0px) rotateX(0deg);
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    }
+    to {
+      -moz-transform: scale(1.5) translateY(-24px) rotateX(45deg);
+      box-shadow: 0 24px 39px var(--primary-color);
+      background: var(--primary-color);
+    }
+  }
+
+  .ui-preloader-hidden & {
+    opacity: 0;
+    visibility: hidden;
+    transition-property: opacity, visibility;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+  }
+
+  .ui-site-loaded & {
+    display: none;
+  }
 }
