feat: add adaptive proader and fix button more in section rating

--- a/src/partials/ratingCard.html
+++ b/src/partials/ratingCard.html
@@ -1,5 +1,5 @@
 <ul class="list-reset card__list">
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -18,7 +18,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -37,7 +37,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -56,7 +56,7 @@
       <a href="productD-31.html" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -75,7 +75,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -94,7 +94,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -113,7 +113,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -132,7 +132,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -151,7 +151,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -170,7 +170,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -189,7 +189,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -208,7 +208,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -227,7 +227,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -246,7 +246,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -265,7 +265,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -284,7 +284,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -303,7 +303,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
@@ -322,7 +322,7 @@
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
     </article>
   </li>
-  <li class="card__item">
+  <li class="card__item rating-card">
     <article class="card__content">
       <span class="card__rating">
         <svg class="card__rating-img">
