--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,4 @@
+@include font-face("Verdana", "../fonts/Verdana", 400, normal);
 @include font-face("Open Sans", "../fonts/OpenSansRegular", 400, normal);
 @include font-face("Open Sans", "../fonts/OpenSansSemiBold", 600, normal);
 @include font-face("Open Sans", "../fonts/OpenSansBold", 700, normal);
