--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -31,4 +31,5 @@
   --black-color: #000000;
   --black-025-color: rgba(0, 0, 0, 0.25);
   --whisper-color: #ebebeb;
+  --very-light-grey-color: #CCCCCC;
 }
