--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -13,6 +13,7 @@
   justify-content: center;
 
   & > .preloader-box {
+    display: flex;
     perspective: 195px;
     -o-perspective: 195px;
     -ms-perspective: 195px;
@@ -22,125 +23,130 @@
 
   & .preloader-box > div {
     position: relative;
-    width: 29px;
-    height: 29px;
-    background: rgb(204, 204, 204);
-    float: left;
+    width: 32px;
+    height: 32px;
+    background: var(--very-light-grey-color);
+    font-family: "Verdana";
+    font-size: 21px;
+    line-height: 32px;
     text-align: center;
-    line-height: 29px;
-    font-family: Verdana;
-    font-size: 19px;
     color: var(--white-color);
+
+    @include mobile {
+      width: 16px;
+      height: 16px;
+      font-size: 12px;
+      line-height: 15px;
+    }
   }
 
   & .preloader-box > div:nth-child(1) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 0ms infinite alternate;
-    -o-animation: movement 690ms ease 0ms infinite alternate;
-    -ms-animation: movement 690ms ease 0ms infinite alternate;
-    -webkit-animation: movement 690ms ease 0ms infinite alternate;
-    -moz-animation: movement 690ms ease 0ms infinite alternate;
+    animation: movement 690ms ease-in-out 0ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 0ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 0ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 0ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 0ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(2) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 86.25ms infinite alternate;
-    -o-animation: movement 690ms ease 86.25ms infinite alternate;
-    -ms-animation: movement 690ms ease 86.25ms infinite alternate;
-    -webkit-animation: movement 690ms ease 86.25ms infinite alternate;
-    -moz-animation: movement 690ms ease 86.25ms infinite alternate;
+    animation: movement 690ms ease-in-out 86.25ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 86.25ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 86.25ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 86.25ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 86.25ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(3) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 172.5ms infinite alternate;
-    -o-animation: movement 690ms ease 172.5ms infinite alternate;
-    -ms-animation: movement 690ms ease 172.5ms infinite alternate;
-    -webkit-animation: movement 690ms ease 172.5ms infinite alternate;
-    -moz-animation: movement 690ms ease 172.5ms infinite alternate;
+    animation: movement 690ms ease-in-out 172.5ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 172.5ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 172.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 172.5ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 172.5ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(4) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 258.75ms infinite alternate;
-    -o-animation: movement 690ms ease 258.75ms infinite alternate;
-    -ms-animation: movement 690ms ease 258.75ms infinite alternate;
-    -webkit-animation: movement 690ms ease 258.75ms infinite alternate;
-    -moz-animation: movement 690ms ease 258.75ms infinite alternate;
+    animation: movement 690ms ease-in-out 258.75ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 258.75ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 258.75ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 258.75ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 258.75ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(5) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 345ms infinite alternate;
-    -o-animation: movement 690ms ease 345ms infinite alternate;
-    -ms-animation: movement 690ms ease 345ms infinite alternate;
-    -webkit-animation: movement 690ms ease 345ms infinite alternate;
-    -moz-animation: movement 690ms ease 345ms infinite alternate;
+    animation: movement 690ms ease-in-out 345ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 345ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 345ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 345ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 345ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(6) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 431.25ms infinite alternate;
-    -o-animation: movement 690ms ease 431.25ms infinite alternate;
-    -ms-animation: movement 690ms ease 431.25ms infinite alternate;
-    -webkit-animation: movement 690ms ease 431.25ms infinite alternate;
-    -moz-animation: movement 690ms ease 431.25ms infinite alternate;
+    animation: movement 690ms ease-in-out 431.25ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 431.25ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 431.25ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 431.25ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 431.25ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(7) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 517.5ms infinite alternate;
-    -o-animation: movement 690ms ease 517.5ms infinite alternate;
-    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
-    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
-    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+    animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(8) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 517.5ms infinite alternate;
-    -o-animation: movement 690ms ease 517.5ms infinite alternate;
-    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
-    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
-    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+    animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(9) {
     background: var(--primary-color);
     border-radius: 3px;
     margin-right: 15px;
-    animation: movement 690ms ease 517.5ms infinite alternate;
-    -o-animation: movement 690ms ease 517.5ms infinite alternate;
-    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
-    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
-    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+    animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
   }
 
   & .preloader-box > div:nth-child(10) {
     background: var(--primary-color);
     border-radius: 3px;
-    margin-right: 15px;
-    animation: movement 690ms ease 517.5ms infinite alternate;
-    -o-animation: movement 690ms ease 517.5ms infinite alternate;
-    -ms-animation: movement 690ms ease 517.5ms infinite alternate;
-    -webkit-animation: movement 690ms ease 517.5ms infinite alternate;
-    -moz-animation: movement 690ms ease 517.5ms infinite alternate;
+    animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -o-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -ms-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -webkit-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
+    -moz-animation: movement 690ms ease-in-out 517.5ms infinite alternate;
   }
 
   @keyframes movement {
